# pytest-result-sender

./: aaa.py  msg.md  pyproject.toml
src/pythonproject1/: plugin.py
tests/: test_ini.py
